# dwave-gate

./: .coveragerc  .gitignore  LICENCE  MANIFEST.in  README.rst  make.bat  makefile  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.circleci/: config.yml
docs/: Makefile  README.rst  api_ref.rst  circuit.rst  conf.py  index.rst  installation.rst  operations.rst  qir.rst  registers.rst  release_notes.rst  requirements.txt  sdk_index.rst  simulator.rst  tools.rst
docs/demos/: index.rst
docs/demos/demos/: intro_demo.py
docs/reference/: circuit.rst  index.rst  operations.rst  qir.rst  registers.rst  simulator.rst  tools.rst
dwave/: __init__.py
dwave/gate/: __init__.py  circuit.py  mixedproperty.py  primitives.py  registers.py  utils.py
dwave/gate/drawer/: __init__.py  characters.py  column.py  drawer.py
dwave/gate/operations/: __init__.py  base.py  operations.py
dwave/gate/qir/: __init__.py  compiler.py  instructions.py  loader.py
dwave/gate/registers/: __init__.py  cyregister.pxd  cyregister.pyi  cyregister.pyx  registers.py
dwave/gate/simulator/: __init__.py  operation_generation.py  ops.h  ops.pxd  simulator.pyx
dwave/gate/tools/: __init__.py  counters.py  samples.py  unitary.py
dwave/gate/vqe/: __init__.py  cqm_partition.py  operators.py  vqe.py
dwave/gate/vqe/transformations/: jordan_wigner.py
dwgms/: __init__.py  circuit.py  mixedproperty.py  qtools.py  registers.py  utils.py
dwgms/operations/: __init__.py  base.py  gates.py  operations.py  template.py  templates.py
dwgms/simulator/: __init__.py  operation_generation.py  simulator.pyx
dwgms/tools/: __init__.py  unitary.py
examples/: 0_circuit.py  1_operations.py  2_templates.py  3_parametric_circuits.py  4_simulator.py  5_measurements.py
releasenotes/notes/: add-get-qubit-method-c854f57d84719a8f.yaml  add-measurements-c548833d86d764a8.yaml  context-returns-namedtuple-83bda2334a7fb8d1.yaml  deprecate-python3.7--102cd953fb6e9a09.yaml  feature-python312-cython3-f79ec6b10494fdc3.yaml  feature-qir-compiler-58332c0019b51ae4.yaml  fix-cond-not-propagating-5dd63d14836aa27e.yaml  fix-measurement-storage-issue-ab52cc05d0802876.yaml  fix-open-issues-6b777eed9cf72188.yaml  fix-operation-call-return-0d522322ccf0f217.yaml  fix-qir-load-midfunc-return-b0f952734e3c6f2a.yaml  fix-sample-circular-import-86ae100745b87464.yaml  pyqir-support-a682839ae2ccc0c5.yaml  python-3.9-3.13-9b276ed8d1edfdf5.yaml  support-numpy-2.0-d9eae4d898fe217e.yaml  update-makefiles-cd19366de0add7d7.yaml  upgrade-circuit-call-bits-f308cc926fa3bce3.yaml  upgrade-multi-qubit-sampling-89e654a179975106.yaml  upgrade-simulator-return-90e29e50768b7112.yaml
tests/: conftest.py  test_circuit.py  test_mixedproperty.py  test_primitives.py  test_registers.py  test_simulator.py
tests/test_io/: test_openqasm.py
tests/test_operations/: test_base.py  test_operations.py
tests/test_qir/: test_compile.py  test_instructions.py  test_load.py
tests/test_simulator/: test_measurements.py  test_simulator.py
tests/test_tools/: test_counters.py  test_unitary.py
