[metadata]
classifiers =
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/dwavesystems/dwave-gate
download_url = https://github.com/dwavesystems/dwave-gate/releases
version = attr: dwgms.__version__

author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
description = Gate model library.

[options]
python_requires = >=3.7
zip_safe = False
include_package_data = True
packages = dwgms
install_requires =
    numpy>=1.21.0,<1.23.0

[pycodestyle]
max-line-length = 100
