[metadata]
classifiers =
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/dwavesystems/dwave-gate
download_url = https://github.com/dwavesystems/dwave-gate/releases
version = attr: dwave.gate.__version__

author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
description = Gate model library.

[options]
python_requires = >=3.7
packages = find:
zip_safe = False

[pycodestyle]
max-line-length = 100

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = tests
python_files = test_*.py
